test added for the addPerson method of PersonController